# ai_analytics_agent

./: .dockerignore  .env.example  .gitignore  AIAnalyticsAgent.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  verify.py
analytics/: __init__.py  ai_engine.py  anomaly.py  metrics.py
dashboard/: __init__.py  routes.py
dashboard/static/css/: style.css
dashboard/static/js/: charts.js
dashboard/templates/: base.html  dashboard.html  developers.html  projects.html  stacks.html  tasks.html
data/demo/: developers.csv  financials.csv  projects.csv  tasks.csv
etl/: __init__.py  extract.py  load.py  transform.py
integrations/: __init__.py  google_sheets.py  mssql_connector.py
models/: __init__.py  database.py  schemas.py
scheduler/: __init__.py  jobs.py
tests/: __init__.py  test_etl.py  test_metrics.py
